[#35] Fix typo on homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
             </div>
             <div class="col-lg-4 order-lg-1">
               <p>Peak Response is an open source software system that provides EMS professionals with simple documentation, powerful sorting, and streamlined analysis capabilities that fit into the workflow of complex MCIs.</p>
-              <p>As first responders collect patient data across a scene, each new piece of information is automatically uploaded to provide a live bird’s-eye view for the incident commander and others managing the scene strategy. Peak Response also allows for easy data transfer to recieiving hospitals, creating a foundation for improved continuation of care.</p>
+              <p>As first responders collect patient data across a scene, each new piece of information is automatically uploaded to provide a live bird’s-eye view for the incident commander and others managing the scene strategy. Peak Response also allows for easy data transfer to receiving hospitals, creating a foundation for improved continuation of care.</p>
             </div>
           </div>
         </div>
