--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,15 @@
     <script type="application/javascript" src="/libraries/jquery/jquery.min.js"></script>
     <script type="application/javascript" src="/libraries/bootstrap/js/bootstrap.min.js"></script>
     <script type="application/javascript" src="/scripts/home.js"></script>
+    <% if (process.env.GOOGLE_ANALYTICS_MEASUREMENT_ID) { %>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=<%= process.env.GOOGLE_ANALYTICS_MEASUREMENT_ID %>"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', '<%= process.env.GOOGLE_ANALYTICS_MEASUREMENT_ID %>');
+    </script>
+    <% } %>
   </head>
   <body>
     <header>
