--- a/views/index.ejs
+++ b/views/index.ejs
@@ -231,15 +231,22 @@
       <footer>
         <div class="container">
           <div class="row">
-            <div class="col-md-4 order-md-2">
+            <div class="col-md-8 order-md-2">
               <ul>
                 <li><a href="#home"><b>Home</b></a></li>
                 <li><a href="#solution">Our Solution</a></li>
                 <li><a href="#story">Our Story</a></li>
                 <li><a href="#contact">Contact Us</a></li>
               </ul>
+              <ul id="footer_icons">
+                <li><a href="https://www.linkedin.com/company/peak-response-inc/"><img src="/images/linkedin.png" alt="LinkedIn" /></a></li>
+                <li><a href="https://twitter.com/peakresponseinc"><img src="/images/twitter.png" alt="Twitter" /></a></li>
+                <li><a href="https://facebook.com/peakresponseinc"><img src="/images/facebook.png" alt="Facebook" /></a></li>
+                <li><a href="https://instagram.com/peakresponseinc"><img src="/images/instagram.png" alt="Instagram" /></a></li>
+                <li><a href="https://github.com/peakresponse"><img src="/images/github.png" alt="Github" /></a></li>
+              </ul>
             </div>
-            <div class="text-md-left col-md-4 order-md-1">
+            <div class="text-md-left col-md-2 order-md-1">
               <img src="/images/logo.png" alt="Peak Response Logo" />
             </div>
             <div id="footer__copyright" class="text-md-right col-md-12 order-md-3">
