--- a/client/admin/facilities/edit-facility.component.html
+++ b/client/admin/facilities/edit-facility.component.html
@@ -2,12 +2,17 @@
   <h1 class="h2">Edit Facility</h1>
 </div>
 <div class="row">
-  <app-shared-form *ngIf="id" type="facilities" [id]="id" class="col-md-3">
+  <app-shared-form #form *ngIf="id" type="facilities" [id]="id" class="col-md-3">
     <ng-template let-record="record" let-error="error">
       <div class="form-group">
         <label for="name">Name</label>
         <input [(ngModel)]="record.name" [class.is-invalid]="error.messages|error:'name'" type="text" class="form-control" id="name" name="name">
         <div *ngIf="error.messages|error:'name' as error" class="invalid-feedback">{{error.message}}</div>
+      </div>
+      <div class="form-group">
+        <label for="latlng">Lat/Lng</label>
+        <input type="text" readonly class="form-control-plaintext" id="latlng" [value]="record.lat + ', ' + record.lng">
+        <button (click)="onGeocode()" type="button" class="btn btn-secondary" i18n>Geocode</button>
       </div>
     </ng-template>
   </app-shared-form>
