--- a/client/admin/states/edit-state.component.html
+++ b/client/admin/states/edit-state.component.html
@@ -1,14 +1,23 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h1 class="h2">Edit State</h1>
 </div>
+<ngb-alert *ngIf="isConfiguring" type="info" [dismissible]="false">
+  <div>{{status || 'Please wait...'}}</div>
+  <div class="text-centered"><app-shared-loader></app-shared-loader></div>
+</ngb-alert>
 <div class="row">
   <app-shared-form *ngIf="id" type="states" [id]="id" class="col-md-3">
     <ng-template let-record="record" let-error="error">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input [(ngModel)]="record.name" [class.is-invalid]="error.messages|error:'name'" type="text" class="form-control" id="name" name="name">
-        <div *ngIf="error.messages|error:'name' as error" class="invalid-feedback">{{error.message}}</div>
-      </div>
+      <fieldset [disabled]="isConfiguring">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input [(ngModel)]="record.name" [class.is-invalid]="error.messages|error:'name'" type="text" class="form-control" id="name" name="name">
+          <div *ngIf="error.messages|error:'name' as error" class="invalid-feedback">{{error.message}}</div>
+        </div>
+        <div class="form-group">
+          <button (click)="onConfigure()" type="button" class="btn btn-primary" i18n>Configure</button>
+        </div>
+      </fieldset>
     </ng-template>
   </app-shared-form>
 </div>
